--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,7 @@ workflows:
 
 jobs:
   build:
-    machine:
-      - image: ubuntu-2004:202010-01
+    machine: true
     steps:
       - run: |
           docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
