--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,4 +14,5 @@ jobs:
     steps:
       - run: |
           docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
+          docker pull roblhall/singularity
           docker run --privileged -v /circle_ci/test_container/:/root/singularity_files singularity build python_app.simg python_app.def
