--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,14 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
 orbs:
   singularity: singularity/singularity@1.0.0
-
 workflows:
   build_container_docker_base_example:
     jobs:
       - singularity/build_container_docker_base:
-          from-uri: ../test_container/python_app.def
-          image: test_py.sif
+          from-uri: 'docker://busybox'
+          image: busybox.sif
           
 #           context: dockerhub # has an env var called MY_ENV_VAR
   
