--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,22 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-orbs:
-  singularity: singularity/singularity@1.0.0
 workflows:
-  build_container_docker_base_example:
+  test-singularity:
     jobs:
-      - singularity/build_container_docker_base:
-          from-uri: 'docker://busybox'
-          image: busybox.sif
+      - test:
+          context: dockerhub # has an env var called MY_ENV_VAR
+jobs:
+  test:
+    docker:
+      - image: roblhall/singularity
+        auth:
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_PASSWORD
+    steps:
+      - checkout
+      - run: singularity --help
+      - run: singularity build python_app.simg python_app.def
           
 #           context: dockerhub # has an env var called MY_ENV_VAR
   
