--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ workflows:
 jobs:
   test:
     machine: true
-    working_directory: ~/circle_ci
+#     working_directory: ~/circle_ci
     steps:
       - checkout
       - run: |
