--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - checkout
       - run: |
-          docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
+          echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password_stdin
           docker pull roblhall/singularity
 
           docker create -v /sfiles --name singularity_files alpine:3.4 /bin/true
