--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           
           ls
 
-          docker cp ~/test_container/ singularity_files:/sfiles
+          docker cp test_container/ singularity_files:/sfiles
           docker run --privileged --volumes-from singularity_files roblhall/singularity build python_app.simg python_app.def
 #     docker:
 #       - image: roblhall/singularity
