--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,34 +5,22 @@ workflows:
   test-singularity:
     jobs:
       - test:
-          context: dockerhub # has an env var called MY_ENV_VAR
+          context: dockerhub
 jobs:
   test:
     machine: true
-#     working_directory: ~/circle_ci
     steps:
       - checkout
       - run: |
-          echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
+      # log into Dockerhub and pull custom singularity container
+          echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin 
           docker pull roblhall/singularity
-
+      # create ephemeral container with volume and copy files there
           docker create -v /sfiles --name singularity_files alpine:3.4 /bin/true
-          
-          ls
-
           docker cp test_container/ singularity_files:/sfiles
+      # run singularity commands and copy output to host
           docker run --privileged --volumes-from singularity_files roblhall/singularity build /sfiles/test_container/python_app.simg /sfiles/test_container/python_app.def
           docker cp singularity_files:/sfiles/test_container/python_app.simg test_container/
-#     docker:
-#       - image: roblhall/singularity
-#         auth:
-#           username: $DOCKERHUB_USERNAME
-#           password: $DOCKERHUB_PASSWORD
-#     steps:
-#       - checkout
-#       - run: singularity --help
-#       - run: singularity build python_app.simg python_app.def
-          
-#           context: dockerhub # has an env var called MY_ENV_VAR
+
   
 
