--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,19 +7,29 @@ workflows:
       - test:
           context: dockerhub
 jobs:
-  test:
+  build:
     machine: true
     steps:
       - checkout
-      - run: |
-          echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin 
-          docker pull roblhall/singularity
-          
-          docker create -v /sfiles --name singularity_files alpine:3.4 /bin/true
-          docker cp test_container/ singularity_files:/sfiles
+      - run:
+        name: build singularity image
+        command: |
+              echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin 
+              docker pull roblhall/singularity
 
-          docker run --privileged --volumes-from singularity_files roblhall/singularity build /sfiles/test_container/python_app.simg /sfiles/test_container/python_app.def
-          docker cp singularity_files:/sfiles/test_container/python_app.simg test_container/
+              docker create -v /sfiles --name singularity_files alpine:3.4 /bin/true
+              docker cp test_container/ singularity_files:/sfiles
 
+              docker run --privileged --volumes-from singularity_files roblhall/singularity build /sfiles/test_container/python_app.simg /sfiles/test_container/python_app.def
+              docker cp singularity_files:/sfiles/test_container/python_app.simg test_container/
+ 
+      - run:
+        name: push singularity image
+        command: |
+              touch test_container/token
+              echo $HUB_TOKEN > test_container/token
+              docker run --privileged roblhall/singularity remote add -i --tokenfile "test_container/token" hinkskalle http://sregistry.ilifu.ac.za
+              
+    
   
 
