--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,12 +23,12 @@ jobs:
               docker run --privileged --volumes-from singularity_files roblhall/singularity build /sfiles/test_container/python_app.simg /sfiles/test_container/python_app.def
               docker cp singularity_files:/sfiles/test_container/python_app.simg test_container/
  
-      - run:
-        name: push singularity image
-        command: |
-              touch test_container/token
-              echo $HUB_TOKEN > test_container/token
-              docker run --privileged roblhall/singularity remote add -i --tokenfile "test_container/token" hinkskalle http://sregistry.ilifu.ac.za
+#       - run:
+#         name: push singularity image
+#         command: |
+#               touch test_container/token
+#               echo $HUB_TOKEN > test_container/token
+#               docker run --privileged roblhall/singularity remote add -i --tokenfile "test_container/token" hinkskalle http://sregistry.ilifu.ac.za
               
     
   
