--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,17 +11,15 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run:
-        name: build singularity image
-        command: |
-              echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin 
-              docker pull roblhall/singularity
+      - run: |
+            echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin 
+            docker pull roblhall/singularity
 
-              docker create -v /sfiles --name singularity_files alpine:3.4 /bin/true
-              docker cp test_container/ singularity_files:/sfiles
+            docker create -v /sfiles --name singularity_files alpine:3.4 /bin/true
+            docker cp test_container/ singularity_files:/sfiles
 
-              docker run --privileged --volumes-from singularity_files roblhall/singularity build /sfiles/test_container/python_app.simg /sfiles/test_container/python_app.def
-              docker cp singularity_files:/sfiles/test_container/python_app.simg test_container/
+            docker run --privileged --volumes-from singularity_files roblhall/singularity build /sfiles/test_container/python_app.simg /sfiles/test_container/python_app.def
+            docker cp singularity_files:/sfiles/test_container/python_app.simg test_container/
  
 #       - run:
 #         name: push singularity image
