--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             
             docker create -v /token_folder --name token_files alpine:3.4 /bin/true
             docker cp test_container/ token_files:/token_folder
-            docker run --privileged --volumes-from token_files roblhall/singularity remote add -i --tokenfile /token_folder/test_container/token hinkskalle http://sregistry.ilifu.ac.za
+            docker run --privileged --volumes-from token_files roblhall/singularity remote add -i --password $HUB_TOKEN hinkskalle http://sregistry.ilifu.ac.za
               
     
   
