--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             docker create -v /sfiles --name singularity_files alpine:3.4 /bin/true
             docker cp test_container/ singularity_files:/sfiles
 
-            docker run --privileged --volumes-from singularity_files roblhall/singularity build /sfiles/test_container/python_app.simg /sfiles/test_container/python_app.def
+            docker run --privileged --volumes-from singularity_files roblhall/singularity:3.9.1 build /sfiles/test_container/python_app.simg /sfiles/test_container/python_app.def
             docker cp singularity_files:/sfiles/test_container/python_app.simg test_container/
  
       - run: |
@@ -27,7 +27,7 @@ jobs:
             
             docker create -v /token_folder --name token_files alpine:3.4 /bin/true
             docker cp test_container/ token_files:/token_folder
-            docker run --privileged --volumes-from token_files roblhall/singularity remote add -i --password $HUB_TOKEN hinkskalle http://sregistry.ilifu.ac.za
+            docker run --privileged --volumes-from token_files roblhall/singularity:3.9.1 remote add -i --password $HUB_TOKEN hinkskalle http://sregistry.ilifu.ac.za
               
     
   
