--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       - run: |
             docker create -v /token_folder --name token_files alpine:3.4 /bin/true
             docker cp test_container/ token_files:/token_folder
+            docker run --privileged --volumes-from token_files roblhall/singularity:3.9.1 --version
             docker run --privileged --volumes-from token_files roblhall/singularity:3.9.1 remote add -i --password $HUB_TOKEN hinkskalle http://sregistry.ilifu.ac.za
               
     
