--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,8 @@ jobs:
 
       - run: |
             sudo apt-get install -y python3-pip
-              
+            pip install git+https://github.com/csf-ngs/hinkskalle-api
+            hinkli --help
     
   
 
